<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_soapclient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SOAPActivity">

    <TextView
        android:text="Temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="37dp"
        android:id="@+id/soapTemperature" />

    <TextView
        android:text="Debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soapDebug"
        android:layout_marginBottom="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/soapTemperature" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/soapTemperature"
        android:layout_alignParentStart="true"
        android:id="@+id/sensorGroup">
        <RadioButton android:id="@+id/soapBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soapBtn"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/xmlBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xmlBtn"
            android:onClick="onRadioButtonClicked"
            android:checked="true" />
    </RadioGroup>

    <RadioGroup
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        android:id="@+id/spotGroup"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">
    <RadioButton android:id="@+id/spot3Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spot3Txt"
        android:onClick="onRadioButtonClicked"
        android:checked="true" />
    <RadioButton android:id="@+id/spot4Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spot4Txt"
        android:onClick="onRadioButtonClicked"/>
</RadioGroup>

    <Button
        android:text="@string/tempBtnTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:id="@+id/getTempBtn"
        android:layout_above="@+id/soapDebug"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
